submarine-istio/submarine-ingress.yaml
#
# Licensed to the Apache Software Foundation (ASF) under one or more
# contributor license agreements.  See the NOTICE file distributed with
# this work for additional information regarding copyright ownership.
# The ASF licenses this file to You under the Apache License, Version 2.0
# (the "License"); you may not use this file except in compliance with
# the License.  You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: submarine-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: submarine-route
spec:
  hosts:
  - "*"
  gateways:
  - submarine-gateway
  http:
  - match:
    - uri:
        exact: /
    - uri:
        regex: '^.*\.(ico|png|jpg|svg)$'
    - uri:
        regex: '^.*\.(html|css|js)$'
    - uri: 
        prefix: /api 
    - uri: 
        prefix: /workbench
    route:
    - destination:
        port:
          number: 8080 
        host: submarine-server
  - match:
    - uri:
        prefix: /minio
    route:
    - destination:
        port:
          number: 9000 
        host: submarine-minio-service
  - match:
    - uri:
        prefix: /mlflow
    route:
    - destination:
        port:
          number: 5000
        host: submarine-mlflow-service
  - match:
    - uri:
        prefix: /tensorboard
    route:
    - destination:
        port:
          number: 8080
        host: submarine-tensorboard-service
